--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+a {
+    padding-top: 10px;
+}
+
 li {
     font-weight: bold;
+    margin: 10px 0;
 }
+
