added working timer and interval function

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,12 @@ p {
     text-align: center;
 }
 
+#timer {
+    border: 2px solid black;
+    font-weight: bold;
+    flex-basis: 20%;
+}
+
 #start-btn {
   align-items: center;
   background-color: red;
