--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ input {
     background-color: cyan;
     font-weight: bold;
     font-size: 1.25rem;
+    border-radius: 2em;
 }
 
 .buttons:hover {
@@ -80,5 +81,11 @@ input {
 }
 
 #quiz-scores li {
-    margin-left: 48%;
+    background-color: rgba(46, 33, 17, 0.171);
+}
+ 
+#quiz-scores {
+    width: 10%;
+    margin: 10px auto;
+
 }
